
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
android:paddingBottom="@dimen/activity_vertical_margin"
android:background="#fff5a2"
android:layout_weight="1"
tools:context=".MainActivity"
android:id="@+id/juantor16">

<ImageView
    android:layout_width="75dp"
    android:layout_height="100dp"
    android:id="@+id/imageView"
    android:src="@drawable/currency_exchange"
    android:layout_below="@+id/textView"
    android:layout_centerHorizontal="true" />
<TextView android:text="@string/hello_world"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/textView">
</TextView>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Dollars_to_pesos"
    android:background="#01A05F"
    android:id="@+id/button"
    android:layout_marginTop="29dp"
    android:layout_below="@+id/textView"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true" />
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/Pesos_to_Dollars"
    android:background="#01A05F"
    android:id="@+id/button2"
    android:layout_alignTop="@+id/button"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true" />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/amount"
    android:layout_below="@+id/imageView"
    android:layout_centerHorizontal="true"
    android:id="@+id/textView2" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAlignment="center"
    android:inputType="number"
    android:ems="10"
    android:id="@+id/editText"
    android:layout_marginTop="26dp"
    android:layout_below="@+id/textView2"
    android:layout_centerHorizontal="true"
    android:imeOptions="actionDone"
    android:hint="Enter the amount here" />
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#80CFAF"
    android:layout_weight="1"
    tools:context=".MainActivity"
    android:layout_below="@+id/editText"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</RelativeLayout>


</RelativeLayout>

