
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#fff5a2"
    android:layout_weight="1"
    tools:context=".MainActivity"
    android:id="@+id/dollarstopesos">>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:id="@+id/icon"
        android:src="@drawable/currency_exchange"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/txtmessage"
        android:layout_alignStart="@+id/txtmessage" />
    <TextView android:text="@string/hello_world"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/txtheader">
    </TextView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount"
        android:layout_below="@+id/icon"
        android:layout_centerHorizontal="true"
        android:id="@+id/txtmessage" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/txtusrinput"
        android:imeOptions="actionDone"
        android:hint="Enter the amount here"
        android:layout_below="@+id/txtmessage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/layout_bg"
        android:layout_weight="1"
        tools:context=".MainActivity"
        android:layout_below="@+id/txtusrinput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/box1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <TextView
            android:singleLine="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total1"
            android:id="@+id/txtblue"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="$"
            android:singleLine="true"
            android:id="@+id/dlrbluesell"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtblue"
            android:layout_alignParentBottom="true"
            android:textSize="25pt"
            style="@style/TextAppearance.AppCompat.Large"
            android:gravity="center|fill"
            android:background="#ff89aaff" />
    </RelativeLayout>

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="DONE"
        android:id="@+id/btndone"
        android:layout_below="@+id/txtmessage"
        android:layout_toRightOf="@+id/txtusrinput"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/box1" />

    <RelativeLayout
        tools:context=".MainActivity"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="130dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/layout_bg"
        android:layout_weight="1"
        android:id="@+id/box2"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:singleLine="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/total2"
            android:id="@+id/txtofficial"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="$"
            android:singleLine="true"
            android:id="@+id/txtofficialtotal"
            android:textSize="25pt"
            android:gravity="center|fill"
            android:layout_below="@+id/txtofficial"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:background="#ff90ff92" />
    </RelativeLayout>


</RelativeLayout>

